# Mahee_Motion

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  ffmpeg.rs  media.rs  mod.rs  project.rs  recorder.rs
src/app/: App.tsx
src/components/inspector/: InspectorPanel.tsx
src/components/layout/: Sidebar.tsx  Toasts.tsx  TopBar.tsx
src/components/media/: FeaturePanel.tsx  MediaPanel.tsx
src/components/modals/: ExportDialog.tsx
src/components/preview/: PreviewPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/components/timeline/: TimelinePanel.tsx
src/components/toolbar/: TimelineToolbar.tsx
src/store/: editorStore.ts  settingsStore.ts
src/styles/: global.css
src/types/: browserFileSystem.d.ts  editor.ts  settings.ts
src/utils/: appSettings.test.ts  appSettings.ts  backgroundRemoval.test.ts  backgroundRemoval.ts  browserExport.ts  colorGrade.ts  effects.ts  filters.ts  masks.ts  mediaPaths.ts  persistence.ts  runtime.ts  stickers.ts  textAnimations.test.ts  textAnimations.ts  textFonts.ts  textStylePresets.ts  time.ts  timeline.test.ts  timeline.ts  timelineDomDrop.ts  transitions.test.ts  transitions.ts  trim.test.ts  trim.ts  videoAnimations.test.ts  videoAnimations.ts
