[package]
name = "mahee-motion"
version = "0.1.0"
description = "Mahee Motion video editor"
authors = ["Maheertha"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mahee_motion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
uuid = { version = "1", features = ["v4"] }
